--- a/app/src/main/res/layout/user_element.xml
+++ b/app/src/main/res/layout/user_element.xml
@@ -19,7 +19,8 @@
         <ImageView
             android:id="@+id/imgSmall"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -64,7 +65,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:scaleType="centerCrop"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
