--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -2,21 +2,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewUser"
-    android:id="@+id/constraint">
+    tools:context=".NewUser">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/imageHolderCardView"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
         app:cardBackgroundColor="#83EEFF"
         app:cardCornerRadius="90dp"
+        app:layout_constraintBottom_toTopOf="@+id/etName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
 
         <ImageView
             android:id="@+id/imageToBeAdded"
@@ -32,19 +35,18 @@
         android:layout_margin="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@drawable/roundback"
         android:ems="10"
-        android:inputType="textPersonName"
 
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:paddingLeft="20dp"
         app:layout_constraintBottom_toTopOf="@+id/etEmail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageHolderCardView"
-        app:layout_constraintVertical_bias="1.0"
-        android:hint="Name"
-        app:layout_marginBaseline="32dp" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -53,44 +55,53 @@
         android:layout_margin="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
         android:background="@drawable/roundback"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Email"
+        android:inputType="textPersonName"
+        android:paddingLeft="20dp"
         app:layout_constraintBottom_toTopOf="@+id/etPhone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etName"
+        app:layout_constraintVertical_bias="0.5" />
 
     <EditText
         android:id="@+id/etPhone"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_margin="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/roundback"
         android:ems="10"
+
         android:hint="Phone"
         android:inputType="textPersonName"
-
+        android:paddingLeft="20dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etEmail"
+        app:layout_constraintVertical_bias="0.5"
         app:layout_marginBaseline="0dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
-        android:text="SUBMIT"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="84dp"
         android:background="#83EEFF"
+        android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPhone"
+        app:layout_constraintVertical_bias="0.5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
